# ai-ml-agents

Databricks-Platform-Insights/: .gitignore  Run_instructions.txt  databricks.yml  variables.yml
Databricks-Platform-Insights/notebooks/: define_mvs.py  grant_lakebase_access.py  setup_lakebase_instance.py  sync_to_lakebase.py
Databricks-Platform-Insights/src/: app.yaml  charts.py  config.py  lakebase_client.py  metrics_queries.py  (+3 more)
Zillow-powered-by-Databricks-AI/: CLAUDE.md  README.md  app.py  config.py  databricks.yml  style.css
agentic-Fraud-Detection/: .gitignore  CLAUDE.md  README.md  databricks.yml  variables.yml
app-langchain-agent-long-short-memory-lakebase/: .env.example  CLAUDE.md  README.md  app.yaml  databricks.yml  pyproject.toml
support-traige-lakebase/: .gitignore  CLAUDE.md  README.md  app.yaml  databricks.yml  pyproject.toml  variables.yml
support-traige-lakebase/backend/: config.py  database.py  main.py  models.py  schema.sql
support-traige-lakebase/backend/routes/: comments.py  stats.py  tickets.py
support-traige-lakebase/frontend/: index.html  package-lock.json  package.json
support-traige-lakebase/frontend/src/: App.jsx  api.js
support-traige-lakebase/frontend/src/components/: CommentSection.jsx  CreateTicket.jsx  Dashboard.jsx  Layout.jsx  TicketDetail.jsx  TicketHistory.jsx  TicketList.jsx
support-traige-lakebase/frontend/src/components/common/: Badge.jsx  Pagination.jsx  PriorityBadge.jsx  StatusBadge.jsx
support-traige-lakebase/frontend/src/styles/: app.css
support-traige-lakebase/scripts/: init_db.py  start_app.py
(+46 files in other folders)
